# fiap_tech_cha_fase2

./: .gitignore  README.md  ingestor.py  pipeline.md  pyproject.toml
scripts/: compress_refined.py  fix_refined_columns.py  read_refined.py  s3_downloader.py  s3_uploader.py
tests/: test_compress_refined.py  test_fix_refined_columns.py  test_read_refined.py  test_timestamps_utc.py
